include augmentation in dataset

--- a/notebooks/train_tinylm.ipynb
+++ b/notebooks/train_tinylm.ipynb
@@ -808,6 +808,322 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "31ab3375",
+   "metadata": {},
+   "source": [
+    "## 🎨 Data Augmentation\n",
+    "\n",
+    "This notebook now supports **data augmentation** to improve model generalization and robustness!\n",
+    "\n",
+    "### **Why Data Augmentation?**\n",
+    "- ✅ **Increases training data diversity** without collecting more samples\n",
+    "- ✅ **Improves model generalization** to rotated, flipped, or color-swapped inputs\n",
+    "- ✅ **Reduces overfitting** by exposing model to variations\n",
+    "- ✅ **Maintains task semantics** - augmentations preserve input-output relationships\n",
+    "\n",
+    "### **Augmentation Types:**\n",
+    "\n",
+    "1. **`'random'` (Default, Recommended)**\n",
+    "   - Random mix of geometric transformations AND color permutations\n",
+    "   - Most diverse augmentation strategy\n",
+    "   - Best for general robustness\n",
+    "\n",
+    "2. **`'geometric'`**\n",
+    "   - Rotation (90°, 180°, 270°)\n",
+    "   - Horizontal/vertical flips\n",
+    "   - Transpose variations\n",
+    "   - Preserves colors, transforms spatial structure\n",
+    "\n",
+    "3. **`'color'`**\n",
+    "   - Color permutations within the task palette\n",
+    "   - Preserves spatial structure\n",
+    "   - Useful for color-invariant tasks\n",
+    "\n",
+    "4. **`'rotation'`** - Only 90/180/270° rotations\n",
+    "5. **`'flip'`** - Only horizontal/vertical flips  \n",
+    "6. **`'transpose'`** - Only transpose variations\n",
+    "7. **`'identity'`** - No augmentation (original data only)\n",
+    "\n",
+    "### **How It Works:**\n",
+    "\n",
+    "Each training example has a probability (`augmentation_prob`) of being augmented on-the-fly:\n",
+    "- **Same augmentation** is applied to both input and output grids\n",
+    "- **Augmentations are dynamic** - generated during training, not pre-computed\n",
+    "- **Task semantics preserved** - the input-output relationship remains valid\n",
+    "\n",
+    "### **Configuration:**\n",
+    "\n",
+    "```python\n",
+    "USE_AUGMENTATION = True        # Enable/disable augmentation\n",
+    "AUGMENTATION_TYPE = 'random'   # Type of augmentation\n",
+    "AUGMENTATION_PROB = 0.5        # 50% chance each example is augmented\n",
+    "```\n",
+    "\n",
+    "### **Performance Tips:**\n",
+    "\n",
+    "- Start with `'random'` and `prob=0.5` (50% augmentation)\n",
+    "- For geometric-focused tasks, try `'geometric'` only\n",
+    "- For color-focused tasks, try `'color'` only  \n",
+    "- Increase `prob` to 0.7-0.8 if you have limited training data\n",
+    "- Decrease `prob` to 0.3 if augmentation slows training too much"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bb8fa44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Demo: Visualize Data Augmentation Effects\n",
+    "# Run this cell to see how different augmentations transform the data\n",
+    "\n",
+    "import numpy as np\n",
+    "from arc.grids.core import Grid\n",
+    "from arc.grids.views import ViewSpec, apply_view_grid, D4, identity_cmap, generate_palette_permutations\n",
+    "\n",
+    "# Create a simple test grid\n",
+    "test_array = np.array([\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6],\n",
+    "    [7, 8, 9]\n",
+    "], dtype=np.int8)\n",
+    "test_grid = Grid(test_array)\n",
+    "\n",
+    "print(\"Original Grid:\")\n",
+    "print(test_grid.a)\n",
+    "print()\n",
+    "\n",
+    "# Demo geometric transformations\n",
+    "print(\"Geometric Transformations:\")\n",
+    "print(\"-\" * 40)\n",
+    "for geom in ['rot90', 'rot180', 'flip_h', 'flip_v', 'transpose']:\n",
+    "    view_spec = ViewSpec(geom=geom, color_map=identity_cmap(), serialization='row')\n",
+    "    transformed = apply_view_grid(test_grid, view_spec)\n",
+    "    print(f\"{geom}:\")\n",
+    "    print(transformed.a)\n",
+    "    print()\n",
+    "\n",
+    "# Demo color permutation\n",
+    "palette = set(np.unique(test_grid.a))\n",
+    "color_maps = generate_palette_permutations(palette, max_count=3)\n",
+    "\n",
+    "print(\"Color Permutations:\")\n",
+    "print(\"-\" * 40)\n",
+    "for i, cmap in enumerate(color_maps[:3]):\n",
+    "    view_spec = ViewSpec(geom='id', color_map=cmap, serialization='row')\n",
+    "    transformed = apply_view_grid(test_grid, view_spec)\n",
+    "    print(f\"Permutation {i+1} (color_map={cmap[:10]}):\")\n",
+    "    print(transformed.a)\n",
+    "    print()\n",
+    "\n",
+    "print(\"💡 During training, these augmentations are applied randomly to\")\n",
+    "print(\"   both input and output grids to increase data diversity!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2d7faf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting TinyLM training with centralized configuration...\n",
+      "Model will be saved to: ./models/tinylm_checkpoints\n",
+      "============================================================\n",
+      "CONFIGURATION SUMMARY:\n",
+      "  Model: 256D, 4L, 4H\n",
+      "  Parameters: ~3.7M\n",
+      "  Training steps: 100\n",
+      "  Effective batch size: 8\n",
+      "  Learning rate: 0.0003\n",
+      "  Sequence length: 2048\n",
+      "============================================================\n",
+      "Training failed with error: {'steps': 100, 'batch_size': 4, 'learning_rate': 0.0003, 'max_sequence_length': 2048, 'betas': (0.9, 0.95), 'weight_decay': 0.01, 'grad_clip_norm': 1.0, 'serialization_mode': 'row', 'pad_token_id': 0, 'ignore_index': 0, 'save_every': 50, 'eval_every': 1000, 'use_amp': True, 'grad_accumulation_steps': 2} is not in list\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/var/folders/3w/z9ryb6gj05n_x375lp0r_81r0000gn/T/ipykernel_3819/3394006310.py\", line 37, in <module>\n",
+      "    list(TRAINING_CONFIGS.values()).index(training_cfg)\n",
+      "ValueError: {'steps': 100, 'batch_size': 4, 'learning_rate': 0.0003, 'max_sequence_length': 2048, 'betas': (0.9, 0.95), 'weight_decay': 0.01, 'grad_clip_norm': 1.0, 'serialization_mode': 'row', 'pad_token_id': 0, 'ignore_index': 0, 'save_every': 50, 'eval_every': 1000, 'use_amp': True, 'grad_accumulation_steps': 2} is not in list\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Start training with centralized configurations, Google Drive backup, and data augmentation\n",
+    "import time\n",
+    "\n",
+    "print(\"Starting TinyLM training with centralized configuration...\")\n",
+    "print(f\"Model will be saved to: {TRAINING_CONFIG['model_dir']}\")\n",
+    "print(\"=\"*60)\n",
+    "\n",
+    "# Display final configuration summary\n",
+    "model_cfg = TRAINING_CONFIG[\"model_config\"]\n",
+    "training_cfg = TRAINING_CONFIG[\"training_config\"]\n",
+    "selected_model_size = TRAINING_CONFIG[\"selected_model_size\"]\n",
+    "selected_training_profile = TRAINING_CONFIG[\"selected_training_profile\"]\n",
+    "\n",
+    "print(\"CONFIGURATION SUMMARY:\")\n",
+    "print(f\"  Model size: {selected_model_size}\")\n",
+    "print(f\"  Training profile: {selected_training_profile}\")\n",
+    "print(f\"  Model: {model_cfg['d_model']}D, {model_cfg['n_layers']}L, {model_cfg['n_heads']}H\")\n",
+    "print(f\"  Parameters: ~{estimate_model_parameters(model_cfg)/1e6:.1f}M\")\n",
+    "print(f\"  Training steps: {training_cfg['steps']:,}\")\n",
+    "print(f\"  Effective batch size: {training_cfg['batch_size'] * training_cfg['grad_accumulation_steps']}\")\n",
+    "print(f\"  Learning rate: {training_cfg['learning_rate']}\")\n",
+    "print(f\"  Sequence length: {training_cfg['max_sequence_length']}\")\n",
+    "print(\"=\"*60)\n",
+    "\n",
+    "# Setup Google Drive backup (optional)\n",
+    "ENABLE_DRIVE_BACKUP = True  # Set to False to disable\n",
+    "DRIVE_BACKUP_PATH = \"/content/drive/MyDrive/ARC_AGI_Checkpoints\"\n",
+    "\n",
+    "if ENABLE_DRIVE_BACKUP:\n",
+    "    print(\"Google Drive Auto-Backup: ENABLED\")\n",
+    "    print(f\"  Backup path: {DRIVE_BACKUP_PATH}\")\n",
+    "    print(\"  ✓ Best checkpoints will be automatically saved to Google Drive\")\n",
+    "    print(\"  ✓ Backup history will be maintained with timestamps\")\n",
+    "else:\n",
+    "    print(\"Google Drive Auto-Backup: DISABLED\")\n",
+    "\n",
+    "print(\"=\"*60)\n",
+    "\n",
+    "# Data Augmentation Configuration (Dictionary-based)\n",
+    "# Format: {'random': prob, 'None': prob, 'specific': {'geometric': prob, 'color': prob, ...}}\n",
+    "# See AUGMENTATION_CONFIG_GUIDE.md for detailed examples\n",
+    "\n",
+    "# Example configurations:\n",
+    "\n",
+    "# 1. No augmentation (default)\n",
+    "AUGMENTATION_CONFIG = {\n",
+    "    'random': 0.0,\n",
+    "    'None': 1.0,\n",
+    "    'specific': {\n",
+    "        'geometric': 0.0,\n",
+    "        'color': 0.0,\n",
+    "        'rotation': 0.0,\n",
+    "        'flip': 0.0,\n",
+    "        'transpose': 0.0,\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "# 2. 50% random augmentation, 50% original\n",
+    "# AUGMENTATION_CONFIG = {\n",
+    "#     'random': 0.5,\n",
+    "#     'None': 0.5,\n",
+    "#     'specific': {\n",
+    "#         'geometric': 0.0,\n",
+    "#         'color': 0.0,\n",
+    "#         'rotation': 0.0,\n",
+    "#         'flip': 0.0,\n",
+    "#         'transpose': 0.0,\n",
+    "#     }\n",
+    "# }\n",
+    "\n",
+    "# 3. Mix of specific augmentations\n",
+    "# AUGMENTATION_CONFIG = {\n",
+    "#     'random': 0.0,\n",
+    "#     'None': 0.3,\n",
+    "#     'specific': {\n",
+    "#         'geometric': 0.3,\n",
+    "#         'color': 0.4,\n",
+    "#         'rotation': 0.0,\n",
+    "#         'flip': 0.0,\n",
+    "#         'transpose': 0.0,\n",
+    "#     }\n",
+    "# }\n",
+    "\n",
+    "# 4. Only geometric augmentations\n",
+    "# AUGMENTATION_CONFIG = {\n",
+    "#     'random': 0.0,\n",
+    "#     'None': 0.2,\n",
+    "#     'specific': {\n",
+    "#         'geometric': 0.8,\n",
+    "#         'color': 0.0,\n",
+    "#         'rotation': 0.0,\n",
+    "#         'flip': 0.0,\n",
+    "#         'transpose': 0.0,\n",
+    "#     }\n",
+    "# }\n",
+    "\n",
+    "# Display augmentation configuration\n",
+    "use_augmentation = (\n",
+    "    AUGMENTATION_CONFIG.get('random', 0) > 0 or\n",
+    "    any(prob > 0 for prob in AUGMENTATION_CONFIG.get('specific', {}).values())\n",
+    ")\n",
+    "\n",
+    "if use_augmentation:\n",
+    "    print(\"Data Augmentation: ENABLED\")\n",
+    "    print(f\"  Configuration:\")\n",
+    "    print(f\"    random: {AUGMENTATION_CONFIG.get('random', 0)}\")\n",
+    "    print(f\"    None (identity): {AUGMENTATION_CONFIG.get('None', 0)}\")\n",
+    "    specific = AUGMENTATION_CONFIG.get('specific', {})\n",
+    "    if any(prob > 0 for prob in specific.values()):\n",
+    "        print(f\"    specific:\")\n",
+    "        for aug_type, prob in specific.items():\n",
+    "            if prob > 0:\n",
+    "                print(f\"      {aug_type}: {prob}\")\n",
+    "else:\n",
+    "    print(\"Data Augmentation: DISABLED (using original data only)\")\n",
+    "\n",
+    "print(\"=\"*60)\n",
+    "\n",
+    "start_time = time.time()\n",
+    "\n",
+    "try:\n",
+    "    # Call the training function with all enhanced features\n",
+    "    train(\n",
+    "        model_dir=TRAINING_CONFIG[\"model_dir\"],\n",
+    "        data_path=TRAINING_CONFIG[\"data_path\"],\n",
+    "        # Pass individual parameters\n",
+    "        steps=training_cfg[\"steps\"],\n",
+    "        bs=training_cfg[\"batch_size\"],\n",
+    "        lr=training_cfg[\"learning_rate\"],\n",
+    "        d_model=model_cfg[\"d_model\"],\n",
+    "        # Use the dynamically selected profiles from previous cell\n",
+    "        model_size=selected_model_size,\n",
+    "        training_profile=selected_training_profile,\n",
+    "        # Checkpoint management\n",
+    "        resume_from_checkpoint=True,\n",
+    "        # Google Drive backup parameters\n",
+    "        enable_drive_backup=ENABLE_DRIVE_BACKUP,\n",
+    "        drive_backup_path=DRIVE_BACKUP_PATH,\n",
+    "        # Data augmentation configuration (dictionary-based)\n",
+    "        augmentation_config=AUGMENTATION_CONFIG,\n",
+    "    )\n",
+    "    \n",
+    "    end_time = time.time()\n",
+    "    training_time = end_time - start_time\n",
+    "    \n",
+    "    print(\"=\"*60)\n",
+    "    print(f\"Training completed successfully!\")\n",
+    "    print(f\"  Configuration used: {selected_model_size} model with {selected_training_profile} profile\")\n",
+    "    print(f\"  Training time: {training_time/60:.1f} minutes\")\n",
+    "    print(f\"  Models saved to: {TRAINING_CONFIG['model_dir']}\")\n",
+    "    \n",
+    "    if ENABLE_DRIVE_BACKUP:\n",
+    "        print(f\"  Google Drive backup: {DRIVE_BACKUP_PATH}\")\n",
+    "        print(\"  ✓ All checkpoints automatically backed up to Google Drive\")\n",
+    "    \n",
+    "    if use_augmentation:\n",
+    "        print(f\"  Data augmentation: Mixed strategy with custom probabilities\")\n",
+    "        print(\"  ✓ Model trained with augmented data variations\")\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(f\"Training failed with error: {e}\")\n",
+    "    import traceback\n",
+    "    traceback.print_exc()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6a851624",
@@ -1161,120 +1477,6 @@
     "print(\"# Run this in a separate cell while training:\")\n",
     "print(\"# monitor_checkpoint_with_drive_backup(TRAINING_CONFIG['model_dir'])\")\n",
     "print(\"=\"*50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2d7faf6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting TinyLM training with centralized configuration...\n",
-      "Model will be saved to: ./models/tinylm_checkpoints\n",
-      "============================================================\n",
-      "CONFIGURATION SUMMARY:\n",
-      "  Model: 256D, 4L, 4H\n",
-      "  Parameters: ~3.7M\n",
-      "  Training steps: 100\n",
-      "  Effective batch size: 8\n",
-      "  Learning rate: 0.0003\n",
-      "  Sequence length: 2048\n",
-      "============================================================\n",
-      "Training failed with error: {'steps': 100, 'batch_size': 4, 'learning_rate': 0.0003, 'max_sequence_length': 2048, 'betas': (0.9, 0.95), 'weight_decay': 0.01, 'grad_clip_norm': 1.0, 'serialization_mode': 'row', 'pad_token_id': 0, 'ignore_index': 0, 'save_every': 50, 'eval_every': 1000, 'use_amp': True, 'grad_accumulation_steps': 2} is not in list\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/var/folders/3w/z9ryb6gj05n_x375lp0r_81r0000gn/T/ipykernel_3819/3394006310.py\", line 37, in <module>\n",
-      "    list(TRAINING_CONFIGS.values()).index(training_cfg)\n",
-      "ValueError: {'steps': 100, 'batch_size': 4, 'learning_rate': 0.0003, 'max_sequence_length': 2048, 'betas': (0.9, 0.95), 'weight_decay': 0.01, 'grad_clip_norm': 1.0, 'serialization_mode': 'row', 'pad_token_id': 0, 'ignore_index': 0, 'save_every': 50, 'eval_every': 1000, 'use_amp': True, 'grad_accumulation_steps': 2} is not in list\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Start training with centralized configurations and Google Drive backup\n",
-    "import time\n",
-    "\n",
-    "print(\"Starting TinyLM training with centralized configuration...\")\n",
-    "print(f\"Model will be saved to: {TRAINING_CONFIG['model_dir']}\")\n",
-    "print(\"=\"*60)\n",
-    "\n",
-    "# Display final configuration summary\n",
-    "model_cfg = TRAINING_CONFIG[\"model_config\"]\n",
-    "training_cfg = TRAINING_CONFIG[\"training_config\"]\n",
-    "selected_model_size = TRAINING_CONFIG[\"selected_model_size\"]\n",
-    "selected_training_profile = TRAINING_CONFIG[\"selected_training_profile\"]\n",
-    "\n",
-    "print(\"CONFIGURATION SUMMARY:\")\n",
-    "print(f\"  Model size: {selected_model_size}\")\n",
-    "print(f\"  Training profile: {selected_training_profile}\")\n",
-    "print(f\"  Model: {model_cfg['d_model']}D, {model_cfg['n_layers']}L, {model_cfg['n_heads']}H\")\n",
-    "print(f\"  Parameters: ~{estimate_model_parameters(model_cfg)/1e6:.1f}M\")\n",
-    "print(f\"  Training steps: {training_cfg['steps']:,}\")\n",
-    "print(f\"  Effective batch size: {training_cfg['batch_size'] * training_cfg['grad_accumulation_steps']}\")\n",
-    "print(f\"  Learning rate: {training_cfg['learning_rate']}\")\n",
-    "print(f\"  Sequence length: {training_cfg['max_sequence_length']}\")\n",
-    "print(\"=\"*60)\n",
-    "\n",
-    "# Setup Google Drive backup (optional)\n",
-    "ENABLE_DRIVE_BACKUP = True  # Set to False to disable\n",
-    "DRIVE_BACKUP_PATH = \"/content/drive/MyDrive/ARC_AGI_Checkpoints\"\n",
-    "\n",
-    "if ENABLE_DRIVE_BACKUP:\n",
-    "    print(\"Google Drive Auto-Backup: ENABLED\")\n",
-    "    print(f\" Backup path: {DRIVE_BACKUP_PATH}\")\n",
-    "    print(\"  Best checkpoints will be automatically saved to Google Drive\")\n",
-    "    print(\"  Backup history will be maintained with timestamps\")\n",
-    "else:\n",
-    "    print(\"Google Drive Auto-Backup: DISABLED\")\n",
-    "\n",
-    "print(\"=\"*60)\n",
-    "\n",
-    "start_time = time.time()\n",
-    "\n",
-    "try:\n",
-    "    # Call the training function with Google Drive backup integration\n",
-    "    train(\n",
-    "        model_dir=TRAINING_CONFIG[\"model_dir\"],\n",
-    "        data_path=TRAINING_CONFIG[\"data_path\"],\n",
-    "        # Pass individual parameters\n",
-    "        steps=training_cfg[\"steps\"],\n",
-    "        bs=training_cfg[\"batch_size\"],\n",
-    "        lr=training_cfg[\"learning_rate\"],\n",
-    "        d_model=model_cfg[\"d_model\"],\n",
-    "        # Use the dynamically selected profiles from previous cell\n",
-    "        model_size=selected_model_size,\n",
-    "        training_profile=selected_training_profile,\n",
-    "        resume_from_checkpoint=True,\n",
-    "        # Google Drive backup parameters\n",
-    "        enable_drive_backup=ENABLE_DRIVE_BACKUP,\n",
-    "        drive_backup_path=DRIVE_BACKUP_PATH,\n",
-    "    )\n",
-    "    \n",
-    "    end_time = time.time()\n",
-    "    training_time = end_time - start_time\n",
-    "    \n",
-    "    print(\"=\"*60)\n",
-    "    print(f\"Training completed successfully!\")\n",
-    "    print(f\"  Configuration used: {selected_model_size} model with {selected_training_profile} profile\")\n",
-    "    print(f\"  Training time: {training_time/60:.1f} minutes\")\n",
-    "    print(f\"  Models saved to: {TRAINING_CONFIG['model_dir']}\")\n",
-    "    \n",
-    "    if ENABLE_DRIVE_BACKUP:\n",
-    "        print(f\"  Google Drive backup: {DRIVE_BACKUP_PATH}\")\n",
-    "        print(\"  ✓ All checkpoints automatically backed up to Google Drive\")\n",
-    "    \n",
-    "except Exception as e:\n",
-    "    print(f\"Training failed with error: {e}\")\n",
-    "    import traceback\n",
-    "    traceback.print_exc()"
    ]
   },
   {
