Freeze Baseline & Sanity Check done

--- a/buffer.ipynb
+++ b/buffer.ipynb
@@ -107,8 +107,48 @@
    "source": [
     "isinstance(5, int)  # True\n",
     "isinstance(\"hello\", str)  # True\n",
-    "isinstance([1, 2, 3], list)  # True"
+    "isinstance([1, 2, 3], list)  # True\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a2ab3c57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "buffer.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "\n",
+    "# help(sys.path)\n",
+    "# help(sys.path.append)\n",
+    "\n",
+    "\n",
+    "from pathlib import Path\n",
+    "# import torch\n",
+    "\n",
+    "# Add project root to path (use absolute path for reliability)\n",
+    "project_root = Path(\"buffer.ipynb\")\n",
+    "# sys.path.insert(0, str(project_root))\n",
+    "print(project_root)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bd61cec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
