Format code with black and remove trailing whitespace (ruff)

--- a/buffer.ipynb
+++ b/buffer.ipynb
@@ -7,17 +7,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#yield: pauses the function and resumes later when the generator's __next__() is called\n",
+    "# yield: pauses the function and resumes later when the generator's __next__() is called\n",
     "def generate_numbers():\n",
-    "\n",
     "    num = 0\n",
     "    print(\"Before entering loop\")\n",
     "    while True:\n",
-    "        print(\"Before yield\") \n",
+    "        print(\"Before yield\")\n",
     "        yield num\n",
     "        num += 1\n",
     "        print(\"Number incremented\")\n",
-    "#make new generator object\n",
+    "\n",
+    "\n",
+    "# make new generator object\n",
     "new = generate_numbers()"
    ]
   },
@@ -40,9 +41,9 @@
     }
    ],
    "source": [
-    "\n",
     "import importlib\n",
     "import arc.grids.core\n",
+    "\n",
     "importlib.reload(arc.grids.core)\n",
     "from arc.grids.core import Grid\n",
     "import numpy as np\n",
@@ -50,8 +51,8 @@
     "g = Grid(np.array([[1, 2], [3, 4]]))\n",
     "\n",
     "copy = g.copy()\n",
-    "copy.a[1,0] = 5\n",
-    "# g.a[1,0] = 5\n"
+    "copy.a[1, 0] = 5\n",
+    "# g.a[1,0] = 5"
    ]
   },
   {
@@ -73,7 +74,7 @@
     }
    ],
    "source": [
-    "print(g)\n"
+    "print(g)"
    ]
   },
   {
@@ -83,8 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "#print the next value in the generator (updates for each call)\n",
+    "# print the next value in the generator (updates for each call)\n",
     "print(next(new))"
    ]
   },
