--- a/notebooks/00_env_colab.ipynb
+++ b/notebooks/00_env_colab.ipynb
@@ -1,57 +1,57 @@
 {
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "# Environment Setup for Colab\n",
-        "\n",
-        "This notebook sets up the environment and tests for CUDA availability.\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "%pip install -r requirements.txt"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import torch\n",
-        "\n",
-        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-        "print(f\"Using device: {device}\")\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "if torch.cuda.is_available():\n",
-        "    print(\"Running CUDA kernel test...\")\n",
-        "    x = torch.randn(100, 100, device=device)\n",
-        "    y = torch.randn(100, 100, device=device)\n",
-        "    z = x + y\n",
-        "    print(\"CUDA kernel test successful!\")\n",
-        "else:\n",
-        "    print(\"CUDA not available, skipping kernel test.\")\n"
-      ]
-    }
-  ],
-  "metadata": {
-    "language_info": {
-      "name": "python"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Environment Setup for Colab\n",
+    "\n",
+    "This notebook sets up the environment and tests for CUDA availability.\n"
+   ]
   },
-  "nbformat": 4,
-  "nbformat_minor": 2
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(f\"Using device: {device}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if torch.cuda.is_available():\n",
+    "    print(\"Running CUDA kernel test...\")\n",
+    "    x = torch.randn(100, 100, device=device)\n",
+    "    y = torch.randn(100, 100, device=device)\n",
+    "    z = x + y\n",
+    "    print(\"CUDA kernel test successful!\")\n",
+    "else:\n",
+    "    print(\"CUDA not available, skipping kernel test.\")"
+   ]
+  }
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
